--- a/10 SDN/SDN and nothing else.tex
+++ b/10 SDN/SDN and nothing else.tex
@@ -43,7 +43,7 @@
 \title{
 \normalsize In the name of Allah\\
 \vspace{10pt}
-\LARGE\FR{بسم \allah الرحمن الرحیم}
+\LARGE\FR{بسم \allah\  الرحمن الرحیم}
 \vspace{10pt}
 \begin{center}
     %	\newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
