--- a/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
+++ b/8 The Web, DHCP, NTP and NAT/The Web, DHCP, NTP and NAT.tex
@@ -42,7 +42,7 @@
 \title{
 \normalsize In the name of Allah\\
 \vspace{10pt}
-\LARGE\FR{بسم \allah الرحمن الرحیم}
+\LARGE\FR{بسم \allah\  الرحمن الرحیم}
 \vspace{10pt}
 \begin{center}
     %	\newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
@@ -64,36 +64,22 @@
 %	\horrule{2pt} \\[0.5cm]
 }
 \author{
-\huge University of Tehran\\
-\LARGE \FR{دانشگاه تهران}\\
-\\
-\LARGE School of Electrical and Computer Engineering\\
-\FR{دانشکده مهندسی برق و کامپیوتر}\\
-\\
-\Large Computer Network Lab\\
-\FR{آزمایشگاه شبکه‌های کامپیوتری}\\
-\\
-\\
-\\
-\normalfont
-Dr. Ahmad Khonsari - \FR{احمد خونساری}\\
-\href{mailto:a_khonsari@ut.ac.ir}{a\_khonsari@ut.ac.ir}\\
-\\
-\normalsize
-Amir Haji Ali Khamseh'i - \FR{امیر حاجی علی خمسه‌ء}\\
-\href{mailto:khamse@ut.ac.ir}{khamse@ut.ac.ir}\\
-\\
-\normalsize
-Sina Kashi pazha - \FR{سینا کاشی پزها}\\
-\href{mailto:sina\_kashipazha@ut.ac.ir}{sina\_kashipazha@ut.ac.ir}\\
-\\
-\normalsize
-Mohammad Ali Shahsavand - \FR{محمد علی شاهسوند}\\
-\href{mailto:mashahsavand@ut.ac.ir}{mashahsavand@ut.ac.ir}\\
-\\
-\normalsize
-Amirahmad Khordadi - \FR{امیر احمد خردادی}\\
-\href{mailto:a.a.khordadi@ut.ac.ir}{a.a.khordadi@ut.ac.ir}
+    \huge University of Tehran\\
+    \LARGE \FR{دانشگاه تهران}\\\\
+    \LARGE School of Electrical and Computer Engineering\\
+    \FR{دانشکده مهندسی برق و کامپیوتر}\\\\
+    \Large Computer Network Lab\\
+    \FR{آزمایشگاه شبکه‌های کامپیوتری}\\\\\\\\
+    \normalfont
+    Dr. Ahmad Khonsari - \FR{احمد خونساری}\\
+    \href{mailto:a_khonsari@ut.ac.ir}{a\_khonsari@ut.ac.ir}\\\\
+    \normalsize
+    Amir Haji Ali Khamseh'i - \FR{امیر حاجی علی خمسه‌ء}\\
+    \href{mailto:khamse@ut.ac.ir}{khamse@ut.ac.ir}\\\\
+    \normalsize \href{mailto:m.borhani@ut.ac.ir}{Muhammad Borhani} - \FR{محمد برهانی}\\
+	\normalsize \href{mailto:a.a.khordadi@ut.ac.ir}{Amirahmad Khordadi} - \FR{امیر احمد خردادی}\\
+	\normalsize \href{mailto:sina\_kashipazha@ut.ac.ir}{Sina Kashi pazha} - \FR{سینا کاشی پزها}\\
+	\normalsize \href{mailto:mashahsavand@ut.ac.ir}{Mohammad Ali Shahsavand} - \FR{محمد علی شاهسوند}
 }
 
 \date{\vspace{30pt}\today\\\vspace{10pt}{\selectlanguage{farsi}\today}}
