--- a/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
+++ b/1 Linux and TCP-IP networking/Linux and TCP-IP networking.tex
@@ -138,6 +138,10 @@ Amir Haji Ali Khamseh'i - \FR{امیر حاجی علی خمسه‌ء}\\
 
 \section*{Systems configuration}
 Launch GNS3 and make a network as below. You can use "\textbf{ifconfig \texttt{eth0} 192.168.0.1 netmask 255.255.255.0}" to set ip.
+\begin{center}
+    %	\newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
+    \begin{minipage}{0.48\textwidth}
+        \begin{flushleft}
 \begin{table}[H]
     \caption{The IP addresses of the hosts}
     \vspace{5pt}
@@ -157,7 +161,10 @@ Launch GNS3 and make a network as below. You can use "\textbf{ifconfig \texttt{e
         \hline \hline
         \end{tabular}
 \end{table}
-
+        \end{flushleft}
+    \end{minipage}
+    \begin{minipage}{0.48\textwidth}
+        \begin{flushright}
 \begin{figure}[H]
     \centering
     \begin{tikzpicture}[font=\sf]
@@ -179,10 +186,14 @@ Launch GNS3 and make a network as below. You can use "\textbf{ifconfig \texttt{e
         \draw[thick] (h5) -- (s);
         \draw[thick] (h6) -- (s);
         \draw[thick] (h7) -- (s);
-       
     \end{tikzpicture}
     \caption{A single segment network}        
 \end{figure}
+        \end{flushright}
+    \end{minipage}
+\end{center}
+
+
 
     \section{Telnet service}
     Run \textbf{ps -e} to list the processes running in \texttt{h1}.
