--- a/2 A single segment network/A single segment network.tex
+++ b/2 A single segment network/A single segment network.tex
@@ -135,14 +135,72 @@ Amir Haji Ali Khamseh'i - \FR{امیر حاجی علی خمسه‌ء}\\
     %\caption
     %\end{otherlanguage}
 
+    \setlength{\parindent}{2em}
+    \setlength{\parskip}{0.5em}
+    % \renewcommand{\baselinestretch}{2.0}
 
-    \section*{Network interface exercises}
+\section*{Network interface exercises}
     The following exercises use the single segment network topology shown in Fig. 1.3.
+    \begin{center}
+        %	\newcommand{\HRule}{\rule{\linewidth}{0.5mm}}
+        \begin{minipage}{0.48\textwidth}
+            \begin{flushleft}
+                \begin{table}[H]
+                    \caption{The IP addresses of the hosts}
+                    \vspace{5pt}
+                    \centering
+                    \begin{tabular}{ l c r }
+                        \hline \hline
+                        Host & IP Address & Subnet Mask \\
+                        \hline 
+                        h0 (shakti) & 128.238.66.100 & 255.255.255.0 \\
+                        h1 (vayu) & 128.238.66.101 & 255.255.255.0 \\
+                        h2 (agni) & 128.238.66.102 & 255.255.255.0 \\
+                        h3 (apah) & 128.238.66.103 & 255.255.255.0 \\
+                        h4 (yachi) & 128.238.66.104 & 255.255.255.0 \\
+                        h5 (fenchi) & 128.238.66.105 & 255.255.255.0 \\
+                        h6 (kenchi) & 128.238.66.106 & 255.255.255.0 \\
+                        h7 (guchi) & 128.238.66.107 & 255.255.255.0 \\
+                        \hline \hline
+                        \end{tabular}
+                \end{table}            
+            \end{flushleft}
+        \end{minipage}
+        \begin{minipage}{0.48\textwidth}
+            \begin{flushright}
+                \begin{figure}[H]
+                    \centering
+                    \begin{tikzpicture}[font=\sf]
+                        \node[draw] (s) at (0,0){Core Switch};
+                        \node[draw,circle] (h0) at (0,2){h0};
+                        \node[draw,circle] (h1) at ({sqrt(2)},{sqrt(2)}){h1};
+                        \node[draw,circle] (h2) at (2,0){h2};
+                        \node[draw,circle] (h3) at (-{sqrt(2)},{sqrt(2)}){h3};
+                        \node[draw,circle] (h4) at (-2,0){h4};
+                        \node[draw,circle] (h5) at (-{sqrt(2)},-{sqrt(2)}){h5};
+                        \node[draw,circle] (h6) at (0,-2){h6};
+                        \node[draw,circle] (h7) at ({sqrt(2)},-{sqrt(2)}){h7};
+                    
+                        \draw[thick] (h0) -- (s);
+                        \draw[thick] (h1) -- (s);
+                        \draw[thick] (h2) -- (s);
+                        \draw[thick] (h3) -- (s);
+                        \draw[thick] (h4) -- (s);
+                        \draw[thick] (h5) -- (s);
+                        \draw[thick] (h6) -- (s);
+                        \draw[thick] (h7) -- (s);
+                    \end{tikzpicture}
+                    \caption{A single segment network}        
+                \end{figure}
+            \end{flushright}
+        \end{minipage}
+    \end{center}
 
-    \section{ Exercise 1}
+\section{Network interfaces}
     Use the \textbf{ifconfig -a} command to display information about the network interfaces on your host.
     Find the IP address and the net mask of your machine.
     \subsection*{Report}
+
     How many interfaces does the host have?
     List all the interfaces found, give their names, and explain their functions briefly. \\
     What are the MTUs of the interfaces on your host? \\
@@ -150,7 +208,7 @@ Amir Haji Ali Khamseh'i - \FR{امیر حاجی علی خمسه‌ء}\\
     What is the reasoning for your answer? What the experimental are the reasons for subnetting?
 
 
-    \section{ Exercise 2}
+\section{Local host dump}
     While \textbf{tcpdump host} \textit{your-host} is running in one command window, run \textbf{ping 127.0.0.1} from another command window.
     \subsection*{Report}
     From the \textbf{ping} output, is the 127.0.0.1 interface on?
@@ -158,30 +216,30 @@ Amir Haji Ali Khamseh'i - \FR{امیر حاجی علی خمسه‌ء}\\
     Why?
 
 
-    \section{ Exercise 3}
+\section{Network statistics}
     By using \textbf{netstat -in} command, collect the statistics from all the hosts on the network.
     Since we use the same login name and password, we can \textbf{telnet} to other workstations and run \textbf{netstat -in} there. \footnote{After you are done with a remote host, you should exit the \textbf{telnet} session before you \textbf{telnet} to another remote host.
     Recursive \textbf{telnet} will generate unnecessary data in the \textbf{tcpdump} output and cause confusion.} \\
     Save the \textbf{netstat -in} outputs. \\
     If you don’t see a significant amount of output packets in the \textbf{netstat} output, the machine was probably restarted recently. You may do this experiment later, or use the following \textbf{sock} command to generate some network traffic: \\
-    \textbf{sock -u -i -n200} \textit{remote-host} \textbf{echo}
+    \centerline{\textbf{socket -u -i -n200} \textit{remote-host} \textbf{echo}}
     \subsection*{Report}
     Calculate the average collision rate over all the hosts for the set of statistics you collected in this exercise.
 
-    \section*{ARP exercises}
+\section*{ARP exercises}
     In the following experiment, we shall examine the host ARP table and the ARP operation, including two interesting cases: proxy ARP and gratuitous ARP. You may need to ask the lab instructor for the MAC addresses of the host and router interfaces, and record these MAC addresses in Table A.1 and Table A.2 in the appendix.
     You need these MAC addresses for the exercises and lab report.
 
-    \section{ Exercise 4}
+\section{ARP table}
     Use \textbf{arp -a} to see the entire ARP table.
     Observe that all the IP addresses displayed are on the same subnet. \\
     If you find that all the remote hosts are in your host’s ARP table, you need to delete a remote host (not your workstation) from the table, using, \\
     \textbf{arp -d} \textit{remote-host}. \footnote{If you deleted your workstation’s IP address from the ARP table by mistake, you must add the entry back in the table. See the \textbf{arp} manual page to add.
     Note that, in order for your workstation to reply to the ARP requests, the ARP entry of your workstation must have the \textbf{P} flag in the ARP table.} \\
     Save the ARP table for your lab report. \\
-    While \textbf{tcpdump -enx -w exe2.out} is running, \textbf{ping} a remote host that has no entry in your host ARP table.
+    While \textbf{tcpdump -en \# -x for see hex dump} is running, \textbf{ping} a remote host that has no entry in your host ARP table.
     Then terminate the \textbf{tcpdump} program. \\
-    Next, run \textbf{wireshark -r exe2.out\&} to load the \textbf{tcpdump} trace file. \\
+    You can run \textbf{wireshark \&} to capture network. \\
     Observe the first few lines of the packet trace to see how ARP is used to resolve an IP address. \\
     Run \textbf{arp -a} to see a new line added in your host’s ARP table.
     Save the new ARP table for your lab report. \\
@@ -198,7 +256,7 @@ Amir Haji Ali Khamseh'i - \FR{امیر حاجی علی خمسه‌ء}\\
         \item Who sends the ARP reply?
     \end{itemize}
 
-    \section{ Exercise 5}
+\section{ARP timeout}
     While \textbf{tcpdump host} \textit{your-host} is running to capture traffic from your machine, execute \textbf{telnet 128.238.66.200}.
     Note there is no host with this IP address in the current configuration of the lab network. \\
     Save the \textbf{tcpdump} output of the first few packets for the lab report. \\
@@ -207,12 +265,12 @@ Amir Haji Ali Khamseh'i - \FR{امیر حاجی علی خمسه‌ء}\\
     From the saved \textbf{tcpdump} output, describe how the ARP timeout and retransmission were performed.
     How many attemps were made to resolve a non-existing IP address?
 
-    \section{ Exercise 6}
+\section{ARP proxy}
     The network topology for this proxy ARP exercise is shown in Fig. 2.9. We will divide the group into two subnets interconnected by a router. The IP addresses and network masks for the hosts are also given in Fig. 2.9. Change the IP address and network mask of your host accordingly (see Section 2.3.2). The IP addresses and network masks of the \texttt{Router4} interfaces are the same as their default settings.
     Note that the network mask of the hosts in the 128.238.65.0 network is 255.255.0.0. \\
     Next we will enable the proxy ARP function on the ethernet1 interface of \texttt{Router4}. \\
     \begin{enumerate}
-        \item \textbf{telnet} to \texttt{Router4} from \texttt{shakti}: \textbf{telnet 128.238.64.4}.
+        \item \textbf{telnet} to \texttt{Router4} from \texttt{shakti}: \textbf{telnet 128.238.64.4}. (\textit{Right click on the Router and open console on GNS3})
         The login password is \texttt{el537}. \footnote{Check with your lab instructor for the password of the router you are using, which may be different from \texttt{el537}.}
         \item Log in to the router, type \textbf{enable} to enter the \textit{Privileged EXEC} mode.\footnote{We will discuss bridge and router configuration in Chapter3.} The password is again \texttt{el537}.
         \item Enter the \textit{Global Configuration} mode by typing \textbf{config term}.
@@ -229,7 +287,7 @@ Amir Haji Ali Khamseh'i - \FR{امیر حاجی علی خمسه‌ء}\\
     Run \textbf{tcpdump -enx} on all the hosts. \\
     Then let the hosts in the 128.238.65.0 subnet send UDP datagrams to the hosts in the 128.238.64.0 subnet.
     For example, on \texttt{guchi} type: \\
-    \textbf{sock -i -u -n1 -w1000} \textit{Host-in-64.0-subnet} \textbf{echo} \\
+    \textbf{socket -i -u -n1 -w1000} \textit{Host-in-64.0-subnet} \textbf{echo} \\
     When you are done with all the hosts in the 128.238.64.0 subnet, save the tcpdump output for the lab report. \\
     Run \textbf{arp -a} to display the new ARP table in your host.
     Save the ARP table for your lab report. \\
@@ -237,7 +295,7 @@ Amir Haji Ali Khamseh'i - \FR{امیر حاجی علی خمسه‌ء}\\
     Exchange your data saved in this exercise with a student working in the other subnet. \\
     \begin{figure}[H]
         \centering
-        \includegraphics[width=0.9\textwidth]{img/figure2-9.png}
+        \includegraphics[width=0.7\textwidth]{img/figure2-9.png}
     \end{figure}
     \subsection*{Report}
     Explain the operation of proxy ARP. \\
@@ -245,9 +303,8 @@ Amir Haji Ali Khamseh'i - \FR{امیر حاجی علی خمسه‌ء}\\
     What are the MAC addresses corresponding to hosts in the 128.238.64.0 subnet, in the ARP table of a host in the 128.238.65.0 subnet? \\
     Give one advantage and one disadvantage of using proxy ARP.
 
-    \section{ Exercise 7}
-    This exercise will be performed by all the students together.
-    While \textbf{tcpdump -ex -w exe7.out} is running on all the hosts, reboot host \texttt{guchi}. \\
+\section{ARP reboot timeout}
+    While \textbf{tcpdump -ex -w exe7.out} (or run \textbf{wireshark}) is running on all the hosts, reboot host \texttt{guchi}. \\
     After \texttt{guchi} is started, terminate \textbf{tcpdump} and run \textbf{wireshark -r exe7.out \&} to load the \textbf{tcpdump} trace.
     Print the the gratuitous ARP request for your lab report.
     \subsection*{Report}
@@ -255,27 +312,27 @@ Amir Haji Ali Khamseh'i - \FR{امیر حاجی علی خمسه‌ء}\\
     List the sender IP address, target IP address, sender MAC address, and target MAC address of the gratuitous ARP you saved.
 
 
-    \section*{Exercise with ICMP and Ping}
-    \section{ Exercise 8}
+\section*{Exercise with ICMP and Ping}
+\section{ping ICMP}
     Use \textbf{ping -sv} \textit{remote-host} to test whether the remote host is reachable, while running: \textbf{tcpdump -enx host} \textit{your-host} \textbf{and} \textit{remote-host}.
     Save the \textbf{tcpdump} and \textbf{ping} output for the future study on \textbf{ping}.
     \subsection*{Report}
     What ICMP messages are used by \textbf{ping}?
 
-    \section{ Exercise 9}
-    While running \textbf{tcpdump -x -s 70 host} \textit{your-host} \textbf{and} \textit{remote-host}, execute the following \textbf{sock} command to send a UDP datagram to the remote host: \textbf{sock -i -u -n1 -w1000} \textit{remote-host} \textbf{88888}. \\
+\section{ICMP port unreachable}
+    While running \textbf{tcpdump -x -s 70 host} \textit{your-host} \textbf{and} \textit{remote-host}, execute the following \textbf{sock} command to send a UDP datagram to the remote host: \textbf{socket -i -u -n1 -w1000} \textit{remote\_host} \textbf{88888}. \\
     Save the \textbf{tcpdump} output for the lab report.
     \subsection*{Report}
     Study the saved ICMP port unreachable error message (see Fig. 2.7).
     Why are the first 8 bytes of the original IP datagram payload included in the ICMP message?
 
-    \section{ Exercise 10}
+\section{ping ICMP}
     While \textbf{tcpdump} is running to capture the ICMP messages, \textbf{ping} a host with IP address 128.238.60.100. Save the \textbf{ping} output.
     \subsection*{Report}
     Can you see any traffic sent on the network? Why? Explain what happened from the \textbf{ping} output. \\
     List the different ICMP messages you captured in Exercises 8, 9, and 10 (if any). Give the values of the type and code fields.
 
-    \section*{Exercises with IP address and subnet mask}
+\section*{Exercises with IP address and subnet mask}
     In this section, we will observe what happens when the same IP address is assigned to two different hosts.
     We will also set an incorrect subnet mask for hosts and see what are the consequences.
     For the next two exercises, we split the current single segment network into two segments, Group A and Group B as shown in Table 2.3, so that they will not interfere with each other.
@@ -283,7 +340,8 @@ Amir Haji Ali Khamseh'i - \FR{امیر حاجی علی خمسه‌ء}\\
         \centering
         \includegraphics[width=0.9\textwidth]{img/table2-3.png}
     \end{figure}
-    \section{ Exercise 11}
+
+\section{Duplicate IP}
     Change the IP address of your workstation as shown in Table 2.3. \\
     Delete the entries for all hosts other than your own workstation from your workstation’s ARP table. \\
     Run \textbf{tcpdump -enx} on all the hosts.
@@ -301,7 +359,7 @@ Amir Haji Ali Khamseh'i - \FR{امیر حاجی علی خمسه‌ء}\\
     Explain what happened in the first case and why.
     Answer the questions for the second and third cases.
 
-    \section{Exercise 12}
+\section{IP subnets}
     Change the host IP addresses and the subnet masks as shown in Table 2.4. Since we still have two separate segments, Groups A and B can do the exercise independently.
     Note that two hosts in each group (\texttt{shakti} and \texttt{apah} in Group A, or \texttt{yachi} and \texttt{guchi} in Group B) are assigned an incorrect subnet mask. \\
     Capture the packets with \textbf{tcpdump -e} for the following cases. \\
